# telegram_alert

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
telegram_alert/: __init__.py  __main__.py  app.py  config.py  logging_conf.py  modes.py
telegram_alert/broker/: amqp.py  jobs.py  worker.py
telegram_alert/db/: engine.py  models.py  repo.py
telegram_alert/migrations/: alembic.ini  env.py
telegram_alert/migrations/versions/: 20260625_0353-154bc1785c64_initial_schema.py
telegram_alert/mqtt/: consumer.py
telegram_alert/services/: frigate.py  schedule.py  storage.py  timecode.py
telegram_alert/telegram/: bot.py  callbacks.py  commands.py  handlers.py  keyboards.py  middleware.py  notify.py  sender.py
