[project]
name = "telegram-alert"
version = "0.1.0"
description = "Frigate -> RabbitMQ -> MinIO -> Telegram alert manager for dacha motion"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13",
    "aiohttp-socks>=0.9",
    "aiomqtt>=2.3",
    "aio-pika>=9.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "minio>=7.2",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "tzdata>=2024.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["telegram_alert"]
